<resources>
    <string name="app_name">ComprasMercado</string>
    <string name="login_title">Delivery SuperMarket</string>
    <string name="compras_subtitle">Compras em Supermercados</string>
    <string name="login_subtitle">Faça seu Login</string>
    <string name="create_count">Insira seus dados abaixo</string>
    <string name="title_activity_">activity</string>
    <string name="email">Entre com Email</string>
    <string name="teste">isaiasfurtado@hotmail.com</string>
    <string name="userName">Nome de Usuario</string>
    <string name="pass">Digite a senha</string>
    <string name="phone">Nº Telefone</string>
    <string name="loguebtn">Executa seu login</string>
    <string name="newPass">Nova Senha:</string>
    <string name="editNewPass">Atualize sua Senha</string>
    <string name="confirmyNewPass">Confirme a nova senha:</string>
    <string name="newuser">Confirmar Registros</string>
    <string name="buttonNewPass">Atualizar sua Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="forgot_pass">Mudar Senha? Clique aqui!</string>
    <string name="create_access">Novo usuário? Crie um aqui</string>
    <string name="message_login_success">Sucesso no Login</string>
    <string name="message_forgot_pass">Senha atualizada!</string>
    <string name = "textNewLayoutPassword">Confirma atualização</string>
    <string name = "listaprodutos">Produtos do Usuario</string>
    <string name="login">Login</string>
    <string name="descr">Descrição</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="quant">Quant</string>
    <string name="preco">Preco</string>
    <string name="editar_produto">Editar Produto</string>
    <string name="registro_do_produto">Registro do Produto</string>
    <string name="editar_produtos">Editar Produtos</string>
    <string name="sair">Sair</string>
    <string name="confirmar_saida">Deseja finalizar o aplicativo?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="novo_item">Novo item</string>
    <string name="sairDaqui">Sair daqui</string>
    <string name="users_list">Lista de Usuários</string>
    <string name="novo_usuario">Novo Usuário</string>
    <string name="hint_inserir_produto">Inserir novo Produto</string>
    <string name="custo">custo</string>
    <string name="venda">venda</string>
    <string name="hint_inserir_usuario">Inserir Usuário</string>
    <string name="night">Night</string>
    <string name="theme_default">Default</string>
    <string name="padrao">Padrão</string>
</resources>